# dudis-2d

./: .gitignore  README.md
docs/: getting-started.md
dudis-2d/: CMakeLists.txt  map.json  run-example.sh
dudis-2d/examples/app/: CMakeLists.txt  CMakePresets.json  README.md  build.sh  dev.sh  main.cpp  run.sh
dudis-2d/examples/app/models/ground/: ground.cpp  ground.h
dudis-2d/examples/app/models/items/apple_item/: apple_item.cpp  apple_item.h
dudis-2d/examples/app/models/player/: player.cpp  player.h
dudis-2d/examples/app/models/utils/: make_animated_player.cpp  make_animated_player.h
dudis-2d/examples/app/scenes/: scene1.cpp  scene1.h
dudis-2d/examples/app/scenes/bg/: background.cpp  background.h
dudis-2d/examples/app/scenes/scene-camera/: scene-camera.cpp  scene-camera.h
dudis-2d/examples/app/scenes/scene-layout/: sceneLayout.cpp  sceneLayout.h
dudis-2d/examples/app/scenes/scene-reso/: scene-reso.cpp  scene-reso.h
dudis-2d/examples/app/scenes/scene-scenes/: scene-scn.cpp  scene-scn.h
dudis-2d/examples/app/scenes/scene2/: scene.cpp  scene2.h
dudis-2d/examples/app/shaders/: teste.frag  teste2.frag
dudis-2d/include/dudis2d/: dudis2d.h  graphics.h  physics.h
dudis-2d/include/dudis2d/core/ddCamera/: ddCamera.h
dudis-2d/include/dudis2d/core/debug/: dd-debug.h
dudis-2d/include/dudis2d/core/entity/: entity.h
dudis-2d/include/dudis2d/core/log/: log.h
dudis-2d/include/dudis2d/core/model/: model.h
dudis-2d/include/dudis2d/core/motion/: motion.h
dudis-2d/include/dudis2d/core/motion/easing/: easing.h
dudis-2d/include/dudis2d/core/motion/easingMotion/: easingMotion.h
dudis-2d/include/dudis2d/core/motion/motionSequencie/: motionSequencie.h
dudis-2d/include/dudis2d/core/motion/movBy/: moveby.h
dudis-2d/include/dudis2d/core/motion/movTo/: movTo.h
dudis-2d/include/dudis2d/core/physicsComponent/: physicsComponent.h
dudis-2d/include/dudis2d/core/physicsComponent/body/: body.h
dudis-2d/include/dudis2d/core/physicsComponent/contactListenear/: contactListenear.h
dudis-2d/include/dudis2d/core/utils/: sizeI.h  types.h  utils.h
dudis-2d/include/dudis2d/core/window/: window.h
dudis-2d/include/dudis2d/globals/: app.h
dudis-2d/include/dudis2d/graphics/: renderable.h  shape.h
dudis-2d/include/dudis2d/graphics/frameBuffer/: frameBuffer.h
dudis-2d/include/dudis2d/graphics/layer/: layer.h
dudis-2d/include/dudis2d/graphics/sprites/: rectangle.h
dudis-2d/include/dudis2d/graphics/ui/: renderUI.h
dudis-2d/include/dudis2d/graphics/utils/: shapeUtils.h
dudis-2d/include/dudis2d/scenes/scene/: scene.h
dudis-2d/include/dudis2d/scenes/sceneManager/: sceneManager.h
dudis-2d/include/dudis2d/scenes/sceneProperty/: sceneProperty.h
dudis-2d/src/core/: raygui_impl.cpp
dudis-2d/src/core/ddCamera/: ddCamera.cpp
dudis-2d/src/core/debug/: dd-debug.cpp
dudis-2d/src/core/entity/: entity.cpp
dudis-2d/src/core/log/: log.cpp
dudis-2d/src/core/model/: model.cpp
dudis-2d/src/core/motion/easing/: easing.cpp
dudis-2d/src/core/motion/easingMotion/: easingMotion.cpp
dudis-2d/src/core/motion/motionSequencie/: motionSequencie.cpp
dudis-2d/src/core/motion/moveBy/: moveBy.cpp
dudis-2d/src/core/motion/moveTo/: moveTo.cpp
dudis-2d/src/core/physicsComponent/: physicsComponent.cpp
dudis-2d/src/core/physicsComponent/body/: body.cpp
dudis-2d/src/core/physicsComponent/contactListenear/: contactListenear.cpp
dudis-2d/src/core/physicsComponent/debugDraw/: debugDraw.cpp
dudis-2d/src/core/window/: window.cpp
dudis-2d/src/globals/: app.cpp
dudis-2d/src/graphics/frameBuffer/: frameBuffer.cpp
dudis-2d/src/graphics/sprites/: rectangle.cpp
dudis-2d/src/graphics/sprites/sprite/: sprite.cpp
dudis-2d/src/graphics/ui/: renderUI.cpp
dudis-2d/src/graphics/ui/UIRoot/: UIRoot.cpp
dudis-2d/src/graphics/ui/button/: button.cpp
dudis-2d/src/graphics/ui/container/: container.cpp
dudis-2d/src/graphics/ui/text/: text.cpp
dudis-2d/src/graphics/utils/: shapeUtils.cpp
dudis-2d/src/graphics/utils/animatedList/: animatedList.cpp
dudis-2d/src/graphics/utils/spriteAnimator/: spriteAnimator.cpp
dudis-2d/src/scenes/scene/: scene.cpp
dudis-2d/src/scenes/sceneManager/: sceneManager.cpp
(+17 files in other folders)
